@startuml modelo_logico_normalizado_3fn
skinparam backgroundColor #FFFFFE
skinparam class {
    BackgroundColor #E8F5E8
    BorderColor #2E8B57
    ArrowColor #2E8B57
}

title Modelo Lógico Normalizado (3FN) - Sistema de Gestión de Barberías

' === TABLAS DE DOMINIO (3FN) ===

class estados {
    <<lookup>>
    +id_estado: PK
    --
    nombre: AK
    descripcion
}

class niveles_acceso {
    <<lookup>>
    +id_nivel: PK
    --
    nombre: AK
    descripcion
}

class categorias_servicio {
    <<lookup>>
    +id_categoria: PK
    --
    nombre: AK
    descripcion
}

class estados_reserva {
    <<lookup>>
    +id_estado_reserva: PK
    --
    nombre: AK
    descripcion
}

class especialidades {
    <<lookup>>
    +id_especialidad: PK
    --
    nombre: AK
    descripcion
}

' === ENTIDADES PRINCIPALES NORMALIZADAS ===

class clientes {
    <<table>>
    +id_cliente: PK
    --
    email: AK
    password_hash
    nombre
    apellido
    telefono
    dni: AK
    direccion
    fecha_nacimiento
    preferencias
    puntos_fidelidad
    fecha_primera_visita
    estado_id: FK
    fecha_registro
    ultimo_acceso
}

class administradores {
    <<table>>
    +id_administrador: PK
    --
    email: AK
    password_hash
    nombre
    apellido
    telefono
    dni: AK
    nivel_acceso_id: FK
    permisos_especiales
    estado_id: FK
    fecha_registro
    ultimo_acceso
}

class barberias {
    <<table>>
    +id_barberia: PK
    --
    id_administrador: FK
    nombre
    direccion
    telefono
    email
    horario_apertura
    horario_cierre
    latitud
    longitud
    estado_id: FK
    fecha_registro
}

class barberos {
    <<table>>
    +id_barbero: PK
    --
    email: AK
    password_hash
    nombre
    apellido
    telefono
    dni: AK
    id_barberia: FK
    experiencia_años
    calificacion_promedio
    estado_id: FK
    fecha_ingreso
    fecha_registro
    ultimo_acceso
}

class servicios {
    <<table>>
    +id_servicio: PK
    --
    id_barberia: FK
    nombre
    descripcion
    duracion_minutos
    precio
    categoria_id: FK
    estado_id: FK
}

class barbero_servicios {
    <<table>>
    +id_asignacion: PK
    --
    id_barbero: FK
    id_servicio: FK
    activo
}

class reservas {
    <<table>>
    +id_reserva: PK
    --
    id_cliente: FK
    id_barbero_servicio: FK
    fecha_hora
    duracion_estimada
    precio_acordado
    estado_reserva_id: FK
    notas_cliente
    notas_barbero
    fecha_creacion
    fecha_confirmacion
    fecha_completada
}

class promociones {
    <<table>>
    +id_promocion: PK
    --
    id_barberia: FK
    nombre
    descripcion
    descuento_porcentaje
    descuento_monto
    fecha_inicio
    fecha_fin
    max_usos
    usos_actuales
    estado_id: FK
}

class calificaciones {
    <<table>>
    +id_calificacion: PK
    --
    id_reserva: FK
    puntuacion_servicio
    puntuacion_barbero
    comentario
    fecha_calificacion
}

' === TABLA MANY-TO-MANY ESPECIALIDADES ===

class barbero_especialidades {
    <<table>>
    +id: PK
    --
    id_barbero: FK
    id_especialidad: FK
}

' === RELACIONES NORMALIZADAS ===

' Referencias a tablas de dominio
estados ||--o{ clientes : "estado_id"
estados ||--o{ administradores : "estado_id"
estados ||--o{ barberos : "estado_id"
estados ||--o{ barberias : "estado_id"
estados ||--o{ servicios : "estado_id"
estados ||--o{ promociones : "estado_id"

niveles_acceso ||--o{ administradores : "nivel_acceso_id"
categorias_servicio ||--o{ servicios : "categoria_id"
estados_reserva ||--o{ reservas : "estado_reserva_id"

' Referencias principales
administradores ||--o{ barberias : "id_administrador"
barberias ||--o{ barberos : "id_barberia"
barberias ||--o{ servicios : "id_barberia"
barberias ||--o{ promociones : "id_barberia"

' Relaciones many-to-many
barberos ||--o{ barbero_servicios : "id_barbero"
servicios ||--o{ barbero_servicios : "id_servicio"

barberos ||--o{ barbero_especialidades : "id_barbero"
especialidades ||--o{ barbero_especialidades : "id_especialidad"

' Relaciones de reservas y calificaciones
clientes ||--o{ reservas : "id_cliente"
barbero_servicios ||--o{ reservas : "id_barbero_servicio"
reservas ||--o| calificaciones : "id_reserva"


@enduml